Corrected version number in source header.

--- a/GreenButtonDemoPage/index.htm
+++ b/GreenButtonDemoPage/index.htm
@@ -2,7 +2,7 @@
 <!--
 ==========================================================================
  html: index.html
-    Version: 0.5 20111201
+    Version: 0.7.20121130
      Author: Ron Pasquarelli, Marty Burns (Hypertek for EnerNex)
      Notice: This is draft prototype developed for SGIP by the Administrator Technical Team (EnerNex)
 ========================================================================== 
